<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/answer2"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvMessage"
        app:layout_constraintEnd_toEndOf="@+id/tvGame2"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/tvGame2" />

    <Button
        android:id="@+id/butCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="onClickCheck"
        android:text="@string/check"
        app:layout_constraintBottom_toTopOf="@+id/butBack2"
        app:layout_constraintEnd_toEndOf="@+id/answer2"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="@+id/answer2" />

    <Button
        android:id="@+id/butBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:onClick="onClickBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/butCheck"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/butCheck" />

    <TextView
        android:id="@+id/tvGame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:textSize="40sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSign2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/butCheck"
        app:layout_constraintEnd_toEndOf="@+id/answer2"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/answer2" />

    <TextView
        android:id="@+id/tvText21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="c"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tvSign2"
        app:layout_constraintEnd_toEndOf="@+id/tvGame2"
        app:layout_constraintTop_toTopOf="@+id/tvSign2" />

    <TextView
        android:id="@+id/tvSign2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="b"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/answer2"
        app:layout_constraintEnd_toStartOf="@+id/tvText21"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/tvText20" />

    <TextView
        android:id="@+id/tvText20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="a"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tvSign2"
        app:layout_constraintStart_toStartOf="@+id/tvGame2"
        app:layout_constraintTop_toTopOf="@+id/tvSign2" />
</androidx.constraintlayout.widget.ConstraintLayout>